--- a/index.html
+++ b/index.html
@@ -32,5 +32,6 @@
             document.getElementById("aiResponse").innerText = result.candidates?.[0]?.content ?? "No response.";
         }
     </script>
+    <script src="script.js"></script>
 </body>
 </html>
