--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
     <script>
         async function getAIResponse() {
-            const apiKey = "AIzaSyBVdZRHYxOj_D3J8CLRnNes_pYJ05jDL3s"; // Replace with your API key
+            const apiKey = ""; // Replace with your API key
             const userCode = document.getElementById("codeInput").value;
 
             const requestBody = {
